--- a/Sager Case Study 1.Rmd
+++ b/Sager Case Study 1.Rmd
@@ -18,6 +18,7 @@ Write an introduction.. The data set used is the Beers data set. The data set co
 ## Read the Data
 ```{r}
 library(tidyverse)
+library(ggthemes)
 
 beers <- read.csv("Data/Beers.csv")
 breweries <- read.csv("Data/Breweries.csv")
@@ -55,4 +56,85 @@ beers_breweries <- left_join(beers_clean, breweries, by = c("Brewery_id" = "Brew
 head(beers_breweries)
 ```
 
-##
+## Data Exploration
+1. How many breweries are present in each state?
+```{r}
+beers_breweries %>%
+    group_by(State) %>%
+    summarize(count = n_distinct(Brewery)) %>%
+    arrange(desc(count))
+
+beers_breweries %>%
+    group_by(State) %>%
+    summarize(count = n_distinct(Brewery_id)) %>%
+    arrange(desc(count))
+#Need to figure out why those are different
+
+# Plot the number of breweries in each state
+beers_breweries %>%
+    group_by(State) %>%
+    summarize(count = n_distinct(Brewery)) %>%
+    arrange(desc(count)) %>%
+    ggplot(aes(x = reorder(State, -count), y = count)) +
+    geom_bar(stat = "identity") +
+    labs(x = "State", y = "Number of Breweries", title = "Number of Breweries in Each State") +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+2. Merge the datasets and print the first 6 and last 6.
+```{r}
+# Duplicated from Wrangling section. Included here for completeness
+str(as.factor(beers$Brewery_id))
+str(as.factor(breweries$Brew_ID))
+beers_breweries <- left_join(beers_clean, breweries, by = c("Brewery_id" = "Brew_ID")) %>%
+    rename(Beer_Name = Name.x, Brewery = Name.y)
+
+head(beers_breweries, 6)
+tail(beers_breweries, 6)
+```
+
+3. Address the missing values in each column.
+```{r}
+#Impute the values for the missing IBU values with the mean IBU value for the style of beer
+beers_clean <- beers %>%
+    group_by(Style) %>%
+    mutate(IBU = ifelse(is.na(IBU), mean(IBU, na.rm = TRUE), IBU))
+
+# Print the beers which have a NA value for the ABV
+beers_clean %>%
+    filter(is.na(ABV)) %>%
+    group_by(Style) %>%
+    summarize(count = n()) %>%
+    arrange(desc(count))
+# Need to decide what to do with these. moving on for now.
+
+```
+
+4. Compute the median alcohol content and international bitterness unit for each state. Plot a bar chart to compare.
+```{r}
+beers_breweries %>%
+    group_by(State) %>%
+    summarize(median_ABV = median(ABV, na.rm = TRUE), median_IBU = median(IBU, na.rm = TRUE)) %>%
+    arrange(desc(median_ABV)) -> beers_medians
+    
+beers_medians %>%
+    ggplot(aes(x = State, y = median_ABV)) +
+    geom_bar(stat = "identity", fill = "cornflowerblue") +
+    labs(x = "State", y = "Median Alcohol Content", title = "Median Alcohol Content in Each State") +
+    theme_economist() +
+    theme(axis.text.x = element_text(angle = 70, hjust = 0))
+
+print(beers_medians)
+```
+
+5. Which state has the maximum alcoholic (ABV) beer? Which state has the most bitter (IBU) beer?
+```{r}
+#Doesn't work
+beers_breweries %>%
+    filter(ABV == max(ABV, na.rm = TRUE)) %>% 
+    select(State, Beer_Name, ABV)
+
+#Less elegant, but works
+max_value <- max(beers_breweries$ABV, na.rm = TRUE)
+beers_breweries[which(beers_breweries$ABV == max_value), c("State", "Beer_Name", "ABV", "Brewery")]
+```
