--- a/Sager Case Study 1.Rmd
+++ b/Sager Case Study 1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Case Study 1 - Beers"
-author: "Nicholas Sager"
+authors: "Nicholas Sager & Steven Cox"
 date: "2/17/2023"
 output: html_document
 ---
@@ -23,38 +23,21 @@ library(ggthemes)
 beers <- read.csv("Data/Beers.csv")
 breweries <- read.csv("Data/Breweries.csv")
 
-summary(is.na(beers))
-summary(is.na(breweries))
-
-#Investigate the missing values by style of beer
-beers %>%
-    group_by(Style) %>%
-    summarize_all(~ sum(is.na(.))) %>%
-    arrange(desc(IBU))
-```
-
-## Data Wrangling
-```{r}
-#Impute the values for the missing IBU values with the mean IBU value for the style of beer
-beers_clean <- beers %>%
-    group_by(Style) %>%
-    mutate(IBU = ifelse(is.na(IBU), mean(IBU, na.rm = TRUE), IBU))
-
-# Print the beers which have a NA value for the ABV
-beers_clean %>%
-    filter(is.na(ABV)) %>%
-    group_by(Style) %>%
-    summarize(count = n()) %>%
-    arrange(desc(count))
-# Need to decide what to do with these. moving on for now.
-
-# Merge the beers and breweries data sets
+# Verify same levels for merging with Brewery ID
 str(as.factor(beers$Brewery_id))
 str(as.factor(breweries$Brew_ID))
-beers_breweries <- left_join(beers_clean, breweries, by = c("Brewery_id" = "Brew_ID")) %>%
+
+# Merge the beers and breweries data sets
+beers_breweries <- left_join(beers, breweries, by = c("Brewery_id" = "Brew_ID")) %>%
     rename(Beer_Name = Name.x, Brewery = Name.y)
 
-head(beers_breweries)
+# Verify data frame
+head(beers_breweries, 6)
+tail(beers_breweries, 6)
+
+# Noticed extra spaces in State abbr
+beers_breweries$State <- str_replace_all(beers_breweries$State," ","")
+
 ```
 
 ## Data Exploration
@@ -70,29 +53,67 @@ beers_breweries %>%
     summarize(count = n_distinct(Brewery_id)) %>%
     arrange(desc(count))
 #Need to figure out why those are different. 
-#Found duplicate for Colorado
-#      Brewery            Brewery_id
-# Oskar Blues Brewery        167
-# Oskar Blues Brewery        504
+#Check that the number of breweries match the number of brewery ids
+n_distinct(beers_breweries$Brewery) == n_distinct(beers_breweries$Brewery_id)
+
+#View abnormalities between Brewery Name and Brewery ID
+unique(beers_breweries[c("Brewery", "Brewery_id")]) %>% 
+  group_by(Brewery) %>% 
+  filter(n() > 1) 
+
+duplicate_IDs <- beers_breweries %>% 
+  distinct(Brewery_id, .keep_all = TRUE) %>%  #get all the unique brewery_id
+  group_by(Brewery) %>% filter(n() > 1) %>%   #group by name and filter for more than 1
+  summarize(Brewery_id = paste(Brewery_id, collapse = "-")) #combine id's with a "-"
+
+# loop through entire data set and if the brewery name is in the clean_breweries list
+# then change the brewery id to the combined brewery id from above
+i<-0
+for (name in beers_breweries$Brewery) {
+  i<-i+1
+  if (name %in% duplicate_IDs$Brewery) {
+    j = which(name == duplicate_IDs$Brewery)
+    beers_breweries$Brewery_id[i] <- duplicate_IDs$Brewery_id[j]
+  }
+}
+#Re-check that the number of breweries match the number of brewery ids
+n_distinct(beers_breweries$Brewery) == n_distinct(beers_breweries$Brewery_id)
 
 # Plot the number of breweries in each state
-beers_breweries %>%
-    group_by(State) %>%
-    summarize(count = n_distinct(Brewery)) %>%
-    arrange(desc(count)) %>%
-    ggplot(aes(x = reorder(State, -count), y = count)) +
+library(usmap)
+library(ggplot2)
+library(ggthemes)
+
+# Setup Stat for graphs
+Brewery_Stat = beers_breweries %>%
+  group_by(State) %>%
+  summarize(count = n_distinct(Brewery)) %>%
+  arrange(desc(count)) 
+
+# Basic Bar plot
+ggplot(Brewery_Stat, aes(x = reorder(State, -count), y = count)) +
     geom_bar(stat = "identity") +
     labs(x = "State", y = "Number of Breweries", title = "Number of Breweries in Each State") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+# Heatmap of with the count over US map
+df <- merge(statepop,Brewery_Stat, by = c("abbr"= "State"))
+df <- left_join(statepop, Brewery_Stat, by = c("abbr"= "State"))
+
+plot_usmap(data = df, values = "count") + 
+  labs(title = "Heat Map of Breweries in Each State") + 
+  theme(plot.title = element_text(hjust = 0.5), legend.position = "right") +
+  scale_fill_gradient('count',  low = "lightblue", high = "red")
+
 ```
 
 2. Merge the datasets and print the first 6 and last 6.
 ```{r}
 # Duplicated from Wrangling section. Included here for completeness
-str(as.factor(beers$Brewery_id))
-str(as.factor(breweries$Brew_ID))
-beers_breweries <- left_join(beers_clean, breweries, by = c("Brewery_id" = "Brew_ID")) %>%
-    rename(Beer_Name = Name.x, Brewery = Name.y)
+# str(as.factor(beers$Brewery_id))
+# str(as.factor(breweries$Brew_ID))
+# beers_breweries <- left_join(beers_clean, breweries, by = c("Brewery_id" = "Brew_ID")) %>%
+#    rename(Beer_Name = Name.x, Brewery = Name.y)
 
 head(beers_breweries, 6)
 tail(beers_breweries, 6)
@@ -100,6 +121,15 @@ tail(beers_breweries, 6)
 
 3. Address the missing values in each column.
 ```{r}
+#Investigate the missing values
+sapply(beers_breweries, function(x) sum(is.na(x)))
+
+# Missing style of beer
+beers %>%
+    group_by(Style) %>%
+    summarize_all(~ sum(is.na(.))) %>%
+    arrange(desc(IBU))
+
 #Impute the values for the missing IBU values with the mean IBU value for the style of beer
 beers_clean <- beers %>%
     group_by(Style) %>%
